Save as it is for now

--- a/docsGenerator/package.json
+++ b/docsGenerator/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "chokidar": "^2.1.1",
     "fable-compiler": "^2.1.11",
     "fable-splitter": "^2.1.2",
     "sass": "^1.16.1"
