--- a/docsGenerator/Docs.fsproj
+++ b/docsGenerator/Docs.fsproj
@@ -1,15 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="src/Libs/FrontMatter.fs" />
-    <Compile Include="src/Helpers.fs" />
-    <Compile Include="src/Route.fs" />
-    <Compile Include="src/Components/Navbar.fs" />
-    <Compile Include="src/Renderer/Page.fs" />
-    <Compile Include="src/Renderer/FromMarkdown.fs" />
-    <Compile Include="src/Main.fs" />
-  </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+    </PropertyGroup>
+    <ItemGroup>
+        <Compile Include="src/Libs/FrontMatter.fs" />
+        <Compile Include="src/Libs/LiveServer.fs" />
+        <Compile Include="src/Libs/Chokidar.fs" />
+        <Compile Include="src/Types.fs" />
+        <Compile Include="src/Templates.fs" />
+        <Compile Include="src/Main.fs" />
+    </ItemGroup>
+    <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
